feat: Project controller funcional